# crispr

./: .gitignore  README.md  TODO.md
jit/: .clang-format  .gitignore  CMakeLists.txt  README.md
jit/src/: ArgParser.h  CMakeLists.txt  CSVReader.h  CrisprCompiler.cpp  CrisprCompiler.h  CrisprLinker.h  CrisprMemoryManager.cpp  CrisprMemoryManager.h  CrisprSegmentManager.h  SeparateFunctionsPass.h  crispr.cpp  util.h
patcher/: .gitignore  README.md  requirements.txt  setup.py
patcher/patcher/: __init__.py  __main__.py  patcher.py  symbols_utils.py
patcher/patcher/merge_dynamic/: __init__.py  __main__.py  file_util.py  iter_util.py  log.py  merge_dynamic.py  merge_dynamic_working.py  parsed_elf.py  struct_util.py
patcher/patcher/patch_utils/: __init__.py  x86_64.py
